--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -1,41 +1,45 @@
 {
   "appName": "MelodyMagic",
-  "tagline": "Crea canciones personalizadas con IA en minutos",
+  "tagline": "Crie músicas personalizadas com IA em minutos",
   "language": "Idioma",
-  "step": "Paso",
-  "next": "Siguiente",
-  "back": "Atrás",
-  "reviewPay": "Revisar y pagar",
-  "packageTitle": "Paquete",
-  "packageDesc": "$10 = 2 canciones",
-  "occasion": "Ocasión",
-  "occasionBirthday": "Cumpleaños",
-  "occasionAnniversary": "Aniversario",
-  "occasionGraduation": "Graduación",
-  "occasionTribute": "Homenaje",
-  "occasionOther": "Otro",
-  "otherPlaceholder": "Escribe tu ocasión...",
-  "aboutPerson": "Sobre la persona",
-  "recipientName": "Nombre de la persona",
-  "relationship": "Tu relación",
-  "dedication": "Mensaje de dedicatoria (detalles, personalidad, recuerdos, etc.)",
-  "songStyle": "Estilo musical",
+  "step": "Etapa",
+  "next": "Próximo",
+  "back": "Voltar",
+  "reviewPay": "Revisar e pagar",
+  "packageTitle": "Pacote",
+  "packageDesc": "$10 = 2 músicas",
+  "occasion": "Ocasião",
+  "occasionBirthday": "Aniversário",
+  "occasionAnniversary": "Aniversário de casamento",
+  "occasionGraduation": "Formatura",
+  "occasionTribute": "Homenagem",
+  "occasionOther": "Outro",
+  "otherPlaceholder": "Digite sua ocasião...",
+  "aboutPerson": "Sobre a pessoa",
+  "recipientName": "Nome da pessoa",
+  "relationship": "Seu relacionamento",
+  "dedication": "Mensagem de dedicação (detalhes, personalidade, memórias, etc.)",
+  "songStyle": "Estilo da música",
   "stylePop": "Pop",
   "styleRock": "Rock",
   "styleSertanejo": "Sertanejo",
   "styleSalsa": "Salsa",
   "styleAfro": "Afro / Angola",
   "styleGospel": "Gospel",
-  "styleOther": "Otro",
-  "mood": "Ambiente",
+  "styleOther": "Outro",
+  "mood": "Clima",
   "moodHappy": "Feliz",
-  "moodEmotional": "Emotivo",
-  "moodRomantic": "Romántico",
-  "moodMotivational": "Motivador",
-  "moodOther": "Otro",
-  "contact": "¿Necesitas ayuda? WhatsApp",
-  "payNote": "Después del pago, guardaremos tu solicitud y entregaremos 2 canciones.",
-  "saving": "Guardando tu pedido…",
-  "saved": "¡Pedido guardado! 🎉",
-  "error": "Algo salió mal."
+  "moodEmotional": "Emocional",
+  "moodRomantic": "Romântico",
+  "moodMotivational": "Motivacional",
+  "moodOther": "Outro",
+  "contact": "Precisa de ajuda? WhatsApp",
+  "payNote": "Após o pagamento, vamos salvar seu pedido e entregar 2 músicas em cerca de 30 minutos.",
+  "saving": "Salvando seu pedido…",
+  "saved": "Pedido salvo! 🎉",
+  "error": "Algo deu errado.",
+  "customerName": "Tu nombre",
+"customerPhone": "Tu número de teléfono",
+"requiredMissing": "Faltan campos obligatorios"
+
 }
